ccrd/parse.output
Terminals unused in grammar

   STRING


State 25 conflicts: 1 shift/reduce


Grammar

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 line: exp CR

    4 exp: primary_exp
    5    | exp ADD primary_exp
    6    | exp SUB primary_exp

    7 primary_exp: mid_exp
    8            | primary_exp MUL mid_exp
    9            | primary_exp DIV mid_exp

   10 mid_exp: NUM
   11        | mid_exp MMUL mid_exp

   12 NUM: FLOAT
   13    | SUB NUM
   14    | LB exp RB


Terminals, with rules where they appear

$end (0) 0
error (256)
CR (258) 3
ADD (259) 5
SUB (260) 6 13
MUL (261) 8
DIV (262) 9
LB (263) 14
RB (264) 14
MMUL (265) 11
FLOAT (266) 12
STRING (267)


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
line_list (14)
    on left: 1 2, on right: 0 2
line (15)
    on left: 3, on right: 1 2
exp (16)
    on left: 4 5 6, on right: 3 5 6 14
primary_exp (17)
    on left: 7 8 9, on right: 4 5 6 8 9
mid_exp (18)
    on left: 10 11, on right: 7 8 9 11
NUM (19)
    on left: 12 13 14, on right: 10 13


State 0

    0 $accept: . line_list $end

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    line_list    go to state 4
    line         go to state 5
    exp          go to state 6
    primary_exp  go to state 7
    mid_exp      go to state 8
    NUM          go to state 9


State 1

   13 NUM: SUB . NUM

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    NUM  go to state 10


State 2

   14 NUM: LB . exp RB

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    exp          go to state 11
    primary_exp  go to state 7
    mid_exp      go to state 8
    NUM          go to state 9


State 3

   12 NUM: FLOAT .

    $default  reduce using rule 12 (NUM)


State 4

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end   shift, and go to state 12
    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    line         go to state 13
    exp          go to state 6
    primary_exp  go to state 7
    mid_exp      go to state 8
    NUM          go to state 9


State 5

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


State 6

    3 line: exp . CR
    5 exp: exp . ADD primary_exp
    6    | exp . SUB primary_exp

    CR   shift, and go to state 14
    ADD  shift, and go to state 15
    SUB  shift, and go to state 16


State 7

    4 exp: primary_exp .
    8 primary_exp: primary_exp . MUL mid_exp
    9            | primary_exp . DIV mid_exp

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 4 (exp)


State 8

    7 primary_exp: mid_exp .
   11 mid_exp: mid_exp . MMUL mid_exp

    MMUL  shift, and go to state 19

    $default  reduce using rule 7 (primary_exp)


State 9

   10 mid_exp: NUM .

    $default  reduce using rule 10 (mid_exp)


State 10

   13 NUM: SUB NUM .

    $default  reduce using rule 13 (NUM)


State 11

    5 exp: exp . ADD primary_exp
    6    | exp . SUB primary_exp
   14 NUM: LB exp . RB

    ADD  shift, and go to state 15
    SUB  shift, and go to state 16
    RB   shift, and go to state 20


State 12

    0 $accept: line_list $end .

    $default  accept


State 13

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


State 14

    3 line: exp CR .

    $default  reduce using rule 3 (line)


State 15

    5 exp: exp ADD . primary_exp

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    primary_exp  go to state 21
    mid_exp      go to state 8
    NUM          go to state 9


State 16

    6 exp: exp SUB . primary_exp

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    primary_exp  go to state 22
    mid_exp      go to state 8
    NUM          go to state 9


State 17

    8 primary_exp: primary_exp MUL . mid_exp

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    mid_exp  go to state 23
    NUM      go to state 9


State 18

    9 primary_exp: primary_exp DIV . mid_exp

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    mid_exp  go to state 24
    NUM      go to state 9


State 19

   11 mid_exp: mid_exp MMUL . mid_exp

    SUB    shift, and go to state 1
    LB     shift, and go to state 2
    FLOAT  shift, and go to state 3

    mid_exp  go to state 25
    NUM      go to state 9


State 20

   14 NUM: LB exp RB .

    $default  reduce using rule 14 (NUM)


State 21

    5 exp: exp ADD primary_exp .
    8 primary_exp: primary_exp . MUL mid_exp
    9            | primary_exp . DIV mid_exp

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 5 (exp)


State 22

    6 exp: exp SUB primary_exp .
    8 primary_exp: primary_exp . MUL mid_exp
    9            | primary_exp . DIV mid_exp

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 6 (exp)


State 23

    8 primary_exp: primary_exp MUL mid_exp .
   11 mid_exp: mid_exp . MMUL mid_exp

    MMUL  shift, and go to state 19

    $default  reduce using rule 8 (primary_exp)


State 24

    9 primary_exp: primary_exp DIV mid_exp .
   11 mid_exp: mid_exp . MMUL mid_exp

    MMUL  shift, and go to state 19

    $default  reduce using rule 9 (primary_exp)


State 25

   11 mid_exp: mid_exp . MMUL mid_exp
   11        | mid_exp MMUL mid_exp .

    MMUL  shift, and go to state 19

    MMUL      [reduce using rule 11 (mid_exp)]
    $default  reduce using rule 11 (mid_exp)
